<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <!-- Обложка трека -->
        <ImageView
            android:id="@+id/trackCover"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/track_cover_description"
            android:scaleType="fitXY" />

        <!-- Название, автор и длительность -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Название трека -->
            <TextView
                android:id="@+id/trackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/track_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Автор трека -->
            <TextView
                android:id="@+id/trackArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/track_author"
                android:textSize="14sp" />

            <!-- Длительность трека -->
            <TextView
                android:id="@+id/trackDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>